--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,24 @@ code {
 nav a {
   padding-left: 20px;
 }
+
+.spinner {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+  background-color: white;
+  top: auto;
+  bottom: auto;
+  left: auto;
+  right: auto;
+}
+
+footer{
+  position: fixed;
+  bottom: 0;
+  width: 100vw;
+}
+
+
