--- a/client/src/components/css/Filter.css
+++ b/client/src/components/css/Filter.css
@@ -12,6 +12,11 @@
 }
 
  button:hover{
+    background:rgb(152, 182, 167);
+    color:white;
+}
+
+button:focus{
     background:rgb(65, 168, 118);
     color:white;
 }
