--- a/client/src/components/css/Navbar.css
+++ b/client/src/components/css/Navbar.css
@@ -1,5 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Raleway&family=Roboto&family=Montserrat:wght@500');
+
 .navbar{
+    font-family: 'Montserrat', sans-serif;
     padding: 1rem 0 1rem 0 !important;
-    font-size:small;
+    font-size:large;
 }
 
+footer{
+    position: static;
+    font-family: 'Roboto', sans-serif;
+}
+
+button{
+    font-family: 'Roboto', sans-serif;
+}
