--- a/client/src/pages/css/home.css
+++ b/client/src/pages/css/home.css
@@ -1,6 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
 img{
-    width:40%;
-    height:40%
+    width:100%;
+    height:100%
 }
 
 .search-box{
