add responsive design to add trail page

--- a/client/src/mapbox/Map.css
+++ b/client/src/mapbox/Map.css
@@ -6,9 +6,11 @@
     background-color: #fff;
     /* position: absolute; */
     z-index:1;
-    overflow: scroll;
+    overflow: auto;
     height: 100%;
-    padding: 5%;
+    max-height: 80vh;
+    padding: 0% 5% 0% 5%;
+    overflow:auto;
 }
 
 .map {
@@ -23,13 +25,43 @@
   text-align: left;
 }
 
-.trailsCardSideBar button {
+.trailsCardSideBar .inner-button {
   margin: 5%;
 }
 
 .instruction {
   border: 1px gainsboro dotted;
   padding: 2%;
+  /* height: 20vh; */
+  /* overflow: auto; */
+}
+
+.collapse-container {
+  display: flex;
+}
+
+
+
+.cDiv {
+  /* background-color: red; */
+  margin: 0;
+  padding: 0;
+}
+
+.cbutton {
+    position: relative;
+    bottom: 0px;
+}
+
+.collapse-content{
+  padding-top: 2%;
+  margin: 0;
+
+}
+
+.map-block {
+  padding: 3px;
+
 }
 
 
