--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,7 @@
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,11 +9,21 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scroll-behavior: smooth;
+  height: 100vh;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root {
+  position: relative;
+  min-height: 100vh;
 }
 
 nav a {
@@ -42,8 +56,15 @@ nav a {
 }
 
 footer{
+  width: 100%;
+  position: relative;
   bottom: 0;
-  width: 100vw;
+  bottom: 0;
+}
+
+.Home {
+  /* text-align: center; */
+  position: relative;
 }
 
 
