--- a/client/src/pages/css/home.css
+++ b/client/src/pages/css/home.css
@@ -1,9 +1,28 @@
+.landing-page {
+    position:relative;
+    min-height: 80vh;
+}
+/* 
+.landing-page-carousel {
+    min-height: 100%;
+    min-width: 100%;
+} */
 
+/* .carousel-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+} */
 
+.carousel-caption {
+    position: relative;
+    top: 0px;
+    bottom: 0px;
+}
 
-img{
+.landing-page img{
     width:100%;
-    height:100%
 }
 
 .search-box{
