--- a/client/src/mapbox/Map.css
+++ b/client/src/mapbox/Map.css
@@ -30,7 +30,11 @@
   padding: 2%;
 }
 
-.instruction-panel li,p  {
+.instruction-panel li  {
+  text-align: left;
+}
+
+.instruction-panel p  {
   text-align: left;
 }
 
