add search page

--- a/client/src/mapbox/Map.css
+++ b/client/src/mapbox/Map.css
@@ -52,6 +52,16 @@
     bottom: 0px;
 }
 
+#search {
+  display: block;
+  justify-content: center;
+  align-items: center;
+}
+
+#search * {
+  margin: auto;
+}
+
 
 
 
