--- a/client/src/pages/css/home.css
+++ b/client/src/pages/css/home.css
@@ -28,3 +28,10 @@
 .search-box{
     width: 30% !important;
 }
+
+.wrapper{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(20rem,16rem));
+    gap:2rem;
+    justify-content: center;
+}
