--- a/client/src/components/css/Navbar.css
+++ b/client/src/components/css/Navbar.css
@@ -12,10 +12,24 @@ footer{
     font-family: 'Roboto', sans-serif;
 }
 
+
 button{
     font-family: 'Roboto', sans-serif;
 }
 
-.banner-logo{
+.navbar .banner-logo{
     width: 8%;
+}
+
+footer .banner-logo{
+    width: 35%;
+}
+
+.footer-wrapper{
+    padding-right: 20% !important;
+    padding-top: 5% !important;
+}
+
+.footer-row{
+    padding-bottom: 5%;
 }
