--- a/client/src/pages/css/TrailDetails.css
+++ b/client/src/pages/css/TrailDetails.css
@@ -1,27 +1,50 @@
-.detailImg{
-    overflow: hidden;
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&family=Work+Sans&display=swap');
+
+
+/* ------------new CSS------------- */
+.navbar-hr{
     width: 100%;
-    height: 50%;
+    color:#4a4a4a;
+    border: none;
+    height: 3px !important;
+}
+h1{
+    font-family: "Merriweather",sans-serif  !important;
+    color: #4a4a4a;
+    line-height: 1.33 !important;
+    font-weight: 600 !important;
 }
 
-.detailImg img {
-    width: 600px;
-    height: 200px;
-  }
-.trailDetail{
-    text-align: center;
+.detail-img img{
+    width: 100%;
+    height: 500px;
+    padding-bottom: 3rem;
+}
+/* .detail-img{
+    position: relative;
 }
 
-.trailDetail button{
-    margin-bottom: 4rem;
+.bottom-left {
+    position: absolute;
+  } */
+
+hr{
+    width: 70%;
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+
 }
 
-.trailDetail.map-container{
-    width: 60%;
-    margin: auto;
+.detail-navbar a{
+    color: #1c1c1c;
+    cursor: pointer;
+    font-size: 1rem;
+    line-height: 1.5;
+    letter-spacing: .075rem;
+    text-decoration: none;
+    white-space: nowrap;
 }
-
-/* ------------new ------------- */
 .detail-wrapper{
     text-align: justify;
     padding: 2rem 3rem;
@@ -29,13 +52,10 @@
 .detail-wrapper h1{
     size:120%;
 }
-.detail-img img{
-    width: 60%;
-    height: 200px;
-}
+
 .detail-navbar{
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(20rem,16rem));
+    grid-template-columns: repeat(auto-fit,minmax(8rem,16rem));
     gap:2rem;
     justify-content: center;
 }
@@ -48,6 +68,8 @@
 
 .detail-instruction p{
     line-height: 2.5rem;
+    font-family: "Source Sans Pro",sans-serif;
+    letter-spacing: 1px;
 }
 
 .map-container{
@@ -56,9 +78,40 @@
 }
 
 
+
 .detail-nearby-card{
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(20rem,16rem));
     gap:2rem;
     justify-content: center;
+}
+
+/* Add to my list button */
+button{
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  letter-spacing: 2px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #000;
+  cursor: pointer;
+  border: 3px solid;
+  padding: 0.25em 0.5em;
+  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+  position: relative;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+button:active {
+  box-shadow: 0px 0px 0px 0px;
+  top: 5px;
+  left: 5px;
+}
+
+@media (min-width: 768px) {
+  button {
+    padding: 0.25em 0.75em;
+  }
 }
