--- a/client/src/pages/css/TrailDetails.css
+++ b/client/src/pages/css/TrailDetails.css
@@ -87,6 +87,10 @@ hr{
 }
 
 /* Add to my list button */
+.addlist{
+    text-align: center;
+    padding: 2rem 0;
+}
 button{
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
