add list button

--- a/client/src/pages/css/TrailDetails.css
+++ b/client/src/pages/css/TrailDetails.css
@@ -91,7 +91,7 @@ hr{
     text-align: center;
     padding: 2rem 0;
 }
-button{
+.addlist button{
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
   letter-spacing: 2px;
@@ -108,14 +108,14 @@ button{
   touch-action: manipulation;
 }
 
-button:active {
+.addlist button:active {
   box-shadow: 0px 0px 0px 0px;
   top: 5px;
   left: 5px;
 }
 
 @media (min-width: 768px) {
-  button {
+  .addlist button {
     padding: 0.25em 0.75em;
   }
 }
