--- a/client/src/components/css/TrailCollection.css
+++ b/client/src/components/css/TrailCollection.css
@@ -4,7 +4,7 @@ body{
 
 .card{
     overflow: hidden;
-    box-shadow: 0 2px 20px grey;
+    box-shadow: 0 2px 5px grey;
     border-radius: 0.2rem;
     display: flex;
     flex-direction: column;
@@ -43,4 +43,23 @@ body{
 .card:hover .card-btn{
     background-color: burlywood;
     color:white;
+}
+
+.slider-wrapper {
+    margin: 1rem auto;
+}
+.slick-slide {
+    padding: 5px 10px;
+}
+
+.slick-slide > button {
+    border: 1px red solid;
+}
+.slick-list {
+    margin-top: 1rem;
+}
+
+.slick-prev:before, .slick-next:before {
+    opacity: 0.5 !important;
+    color: black !important;
 }
