--- a/client/src/pages/css/UserLists.css
+++ b/client/src/pages/css/UserLists.css
@@ -4,7 +4,7 @@
     margin: auto;
 
 }
-h1{
+.profile-header h1{
     padding: 2rem 0;
     font-family: 'Montserrat', sans-serif;
     font-size: 1.5rem !important;
