--- a/client/src/pages/css/TrailDetails.css
+++ b/client/src/pages/css/TrailDetails.css
@@ -8,7 +8,7 @@
     border: none;
     height: 3px !important;
 }
-h1{
+.detail-wrapper h1{
     font-family: "Merriweather",sans-serif  !important;
     color: #4a4a4a;
     line-height: 1.33 !important;
@@ -28,7 +28,7 @@ h1{
     position: absolute;
   } */
 
-hr{
+.detail-wrapper hr{
     width: 70%;
     border: 0;
     height: 1px;
