enrich map in details page, edit styles

--- a/client/src/pages/css/TrailDetails.css
+++ b/client/src/pages/css/TrailDetails.css
@@ -72,6 +72,20 @@
     letter-spacing: 1px;
 }
 
+.detail-instruction li {
+    list-style: none;
+}
+
+.detail-instruction li {
+    list-style: none;
+}
+
+.detail-instruction .direction-icon {
+    margin-right: 1rem;
+}
+
+/* .fa- */
+
 .map-container{
     width: 80%;
     margin: auto;
