--- a/client/src/components/css/TrailCards.css
+++ b/client/src/components/css/TrailCards.css
@@ -1,14 +1,16 @@
-.trailCards{
+.cards-collection{
     padding-left: 2%;
-    padding-top:10%;
 }
 
-.trailCards{
+.cards-collection{
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-around;
     align-items: stretch;
+}
+.cards-collection .card {
+    margin: 2em auto;
 }
 
 .trail-map{
