--- a/client/src/pages/css/TrailDetails.css
+++ b/client/src/pages/css/TrailDetails.css
@@ -86,12 +86,10 @@
 
 /* .fa- */
 
-.map-container{
+.detail-map .map-container{
     width: 80%;
     margin: auto;
 }
-
-
 
 .detail-nearby-card{
     display: grid;
