--- a/client/src/components/css/TrailCollection.css
+++ b/client/src/components/css/TrailCollection.css
@@ -18,9 +18,13 @@ body{
     width: 100%;
     object-fit: cover;
 }
-
-.card-title {
-    /* height: 3em; */
+.cards-collection .card-title{
+    margin: 2% auto;
+    line-height: 1em;
+    word-wrap:break-word;
+}
+.card .card-title {
+    height: 3em;
     margin: 2% auto;
     line-height: 1em;
     word-wrap:break-word;
