--- a/client/src/pages/css/UserLists.css
+++ b/client/src/pages/css/UserLists.css
@@ -9,7 +9,7 @@
     font-family: 'Montserrat', sans-serif;
     font-size: 1.5rem !important;
 }
-.profile-header .cards{
+/* .profile-header .cards{
     padding-left: 25%;
-    /* TODO: center the cards */
-}
+
+} */
