--- a/client/src/mapbox/Map.css
+++ b/client/src/mapbox/Map.css
@@ -1,5 +1,7 @@
 .map-block {
-  padding: 3px;
+  padding: 1px;
+  height: min(90vh,100%);
+  max-height: 90vh;
 }
 
 .map-container {
@@ -8,12 +10,13 @@
 
 .trailsCardSideBar{
     background-color: #fff;
-    z-index:1;
+    z-index:0;
     overflow: auto;
-    height: 100%;
-    max-height: 80vh;
-    padding: 0% 5% 0% 5%;
+    max-height: 100%;
+    margin: 3px;
     overflow:auto;
+    /* border: 2px red solid; */
+    /* border-radius: 0.5rem; */
 }
 
 .collapse-content{
@@ -39,8 +42,13 @@
 }
 
 .map {
-  height:80vh;
+  height:90vh;
+  /* width: fit-content; */
 }
+/* .mapboxgl-map .mapboxgl-canvas {
+  min-height: 100%;
+  min-width: 100%;
+} */
 
 .collapse-control-panel {
   margin: 0;
