--- a/client/src/components/css/Search.css
+++ b/client/src/components/css/Search.css
@@ -1,4 +1,4 @@
-.searchResultCard{
+/* .searchResultCard{
     padding-top: 3rem;
 }
 
@@ -14,4 +14,115 @@
     text-align:justify;
     width: 50%;
     line-height: 2rem;
+}
+
+body{
+    margin: 2rem;
+}
+
+.searchResultCard .card{
+    overflow: hidden;
+    box-shadow: 0 2px 5px grey;
+    border-radius: 0.2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+    transition: transform 200ms ease-in;
+}
+.card .card-img{
+    height: 10rem;
+    width: 100%;
+    object-fit: cover;
+}
+.cards-collection .card-title{
+    margin: 2% auto;
+    line-height: 1em;
+    word-wrap:break-word;
+}
+
+.searchResultCard.card-title {
+    height: 4em;
+    margin: 2% auto;
+    line-height: 1em;
+    word-wrap:break-word;
+    padding-top: 10%;
+}
+
+.card-description{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    color: gray;
+}
+
+.card-description span {
+    margin-right: 2px;
+    display: inline-block;
+    vertical-align:top;
+}
+
+.card-description .star {
+    padding: 0;
+} */
+
+
+/* Search Result card */
+.search-wrapper{
+    overflow: hidden;
+    box-shadow: 0 2px 5px grey;
+    border-radius: 0.2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+    transition: transform 200ms ease-in;
+    margin: auto 20% 2% 20%;
+}
+.search-detail{
+    display: grid;
+    grid-template-columns: 36% 65%;
+}
+.search-wrapper .card-img{
+    height: 80%;
+    width: 100%;
+    object-fit: cover;
+}
+.search-Img{
+    margin: auto;
+    padding: 1rem;
+}
+.search-card-title{
+    padding-bottom: 10%;
+    font-size: 120%;
+}
+
+.search-deleteBtn{
+    float: right;
+    padding: 2% 4% 0 0;
+    color:rgb(2, 51, 2)
+}
+
+.search-detailInfo{
+    margin: auto auto auto 5%;
+    text-align: left;
+}
+.search-card-description{
+    color:rgb(76, 73, 73);
+    line-height: 2rem;
+}
+
+@media (max-width: 1024px){
+    .search-wrapper {
+        font: 0.9em sans-serif;
+    }
+}
+
+@media (max-width: 768px){
+
+    .search-wrapper {
+        font: 0.6em sans-serif;
+        margin: auto 10% 2% 10%;
+    }
 }
