--- a/client/src/components/css/Navbar.css
+++ b/client/src/components/css/Navbar.css
@@ -6,11 +6,7 @@
     font-size:large;
 }
 
-footer{
-    /* position: fixed; */
-    bottom: 0;
-    font-family: 'Roboto', sans-serif;
-}
+
 
 
 button{
@@ -21,15 +17,50 @@ button{
     width: 8%;
 }
 
-footer .banner-logo{
-    width: 35%;
+/* footer .footer-row {
+    height: 100%;
+    margin: auto;
 }
 
-.footer-wrapper{
-    padding-right: 20% !important;
-    padding-top: 5% !important;
+footer .logo-column {
+    object-fit: contain;
+    max-width:100%;
+    max-height:100%;  
+} */
+
+
+footer{
+    height: 10rem;
+    position: absolute;
+    bottom:0;
+    font-family: 'Roboto', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    
+}
+footer .row {
+    width: 100%;
+    height: 100%;
 }
 
-.footer-row{
-    padding-bottom: 5%;
+footer .logo-column {
+    margin: auto;
+}
+
+
+footer img{
+    max-width: min(100%,10rem); /* or any custom size */
+    max-height: min(100%,10rem); 
+    object-fit: contain;
+}
+
+.footer-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+    background-color: #f8f9fa;
+    font-size: small;
 }
