--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,7 +2,6 @@
     text-align: center;
     position: relative;
     min-height: 100vh;
-    padding-bottom: 10rem;
   }
   
   .App-logo {
@@ -39,5 +38,9 @@
       transform: rotate(360deg);
     }
   }
+
+#Home-Page,#UserList-Page,#UserProfile-Page,#TrailDetrails-Page,#Search-Page {
+  padding-bottom: 10rem;
+}
 
   
