--- a/client/src/components/css/Navbar.css
+++ b/client/src/components/css/Navbar.css
@@ -38,6 +38,7 @@ footer{
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    padding: 0;
     
 }
 footer .row {
