--- a/client/src/components/css/TrailCollection.css
+++ b/client/src/components/css/TrailCollection.css
@@ -43,7 +43,7 @@ body{
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    color: gray;
+    color: rgb(83, 83, 83);
 }
 
 .card-description span {
@@ -92,12 +92,21 @@ body{
 }
 
 .slick-prev:before, .slick-next:before {
-    opacity: 0.5 !important;
+    /* opacity: 0.5 !important; */
     color: black !important;
+}
+
+@media (max-width: 1300px){
+    .card-description {
+        font: 0.9em sans-serif;
+    }
 }
 
 @media (max-width: 1024px){
     .card {
+        font: 0.9em sans-serif;
+    }
+    .card-description {
         font: 0.9em sans-serif;
     }
 }
