--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,8 @@
-/* html {
-  height: 100%;
-} */
+html {
+  height: 100vh;
+  width: 100vw;
+  
+}
 
 body {
   margin: 0;
@@ -24,12 +26,6 @@ code {
 
 nav a {
   padding-left: 20px;
-}
-
-.trailContainer {
-  background-color: aliceblue;
-  margin: 5px;
-  padding: 5px;
 }
 
 .nameIconContainer {
@@ -57,8 +53,4 @@ footer{
   bottom: 0;
 }
 
-.Home {
-  /* text-align: center; */
-  position: relative;
-}
 
