--- a/client/src/pages/css/Profile.css
+++ b/client/src/pages/css/Profile.css
@@ -1,34 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald&family=Raleway&family=Roboto&family=Montserrat:wght@500');
-/* .profile-avatar{
-    margin-left: 7rem;
-}
-.profile-header h2{
-    font-family: 'Montserrat', sans-serif;
-    padding-top: 2rem;
-    font-size: medium !important;
-}
 
-.profile-header p{
-    font-family: 'Roboto', sans-serif;
-    font-size: medium !important;
-}
-
-.profile-header hr{
-    margin: auto !important;
-    width: 50%;
-    margin-bottom: 3rem;
-}
-
-.profile-avatar img{
-    width: 40% !important;
-} */
-/* .profile-wrapper{
-    display: grid;
-    grid-template-columns: 30% 70%;
-    gap:2rem;
-    justify-content: center;
-    margin: 5rem auto;
-} */
 
 .profile-btn{
     padding: 5% 0 15%;
@@ -36,6 +7,17 @@
 .profile-Img p{
     text-align: left;
     padding-left: 15%;
+}
+
+.profile-header-icon {
+    display: block;
+}
+
+.profile-Img img {
+    width: 10rem;
+}
+.profile-Img .row {
+    display: block;
 }
 
 
