--- a/client/src/pages/css/UserLists.css
+++ b/client/src/pages/css/UserLists.css
@@ -7,9 +7,12 @@
 .profile-header h1{
     padding: 2rem 0;
     font-family: 'Montserrat', sans-serif;
-    font-size: 1.8rem !important;
+    font-size: 1.8rem;
 }
-/* .profile-header .cards{
-    padding-left: 25%;
 
-} */
+@media (max-width: 768px){
+
+    .profile-header h1{
+        font-size: 1.5rem;
+    }
+}
