--- a/client/src/pages/css/home.css
+++ b/client/src/pages/css/home.css
@@ -100,16 +100,26 @@
 	font-weight: 700;
 }
 
+@media (max-width: 1920px){
+    .main-container {
+        width: calc(100% - 80px);
+    }
+}
+
 
 @media (max-width: 1024px){
     .main-container {
-        width: calc(100% - 80px);
+        width: calc(100% - 100px);
     }
 }
 
 @media (max-width: 768px){
     .main-container {
         width: calc(100% - 80px);
+    }
+
+    .section-header-container {
+        font: 0.9em sans-serif;
     }
 }
 
