--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,9 +3,14 @@
     position: relative;
     min-height: 100vh;
   }
-  
+
 #Home-Page,#UserList-Page,#UserProfile-Page,#TrailDetrails-Page,#Search-Page {
   padding-bottom: 10rem;
 }
+
+.row {
+  margin: 0 ! important;
+}
+
 
   
