--- a/client/src/mapbox/Map.css
+++ b/client/src/mapbox/Map.css
@@ -1,7 +1,7 @@
 .map-block {
-  padding: 1px;
-  height: min(90vh,100%);
-  max-height: 90vh;
+  /* padding: 1px; */
+  height: min(85vh,100%);
+  max-height: 85vh;
 }
 
 .trailsCardSideBar{
@@ -11,8 +11,6 @@
     max-height: 100%;
     margin: 3px;
     overflow:auto;
-    /* border: 2px red solid; */
-    /* border-radius: 0.5rem; */
 }
 
 .collapse-content{
