--- a/client/src/pages/css/Profile.css
+++ b/client/src/pages/css/Profile.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald&family=Raleway&family=Roboto&family=Montserrat:wght@500');
 
+#UserProfile-Page .row {
+  margin: 0 !important;
+}
 
 .profile-btn{
     padding: 5% 0 15%;
