--- a/client/src/pages/css/TrailDetails.css
+++ b/client/src/pages/css/TrailDetails.css
@@ -153,7 +153,7 @@
 
 .review-add {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 #detail-map .detail-map-container {
