--- a/client/src/mapbox/Map.css
+++ b/client/src/mapbox/Map.css
@@ -24,6 +24,8 @@
 .instruction {
   border: 1px gainsboro dotted;
   padding: 2%;
+  max-height: 35vh;
+  overflow-y: auto;
 }
 
 .instruction-panel li  {
@@ -67,4 +69,15 @@
   padding: 0;
 }
 
+/* @media (max-width: 1024px){
+  .instruction{
+    max-height: 40vh;
+  }
+} */
 
+@media (max-width: 768px){
+
+  .instruction{
+    max-height: 6rem;
+  }
+}
